article/static/article/css/blocks.less
@import "static/css/common.less";

.image-block {
  background: white;

  .image {
    position: relative;
    background: black;
    height: 380px;
    img {
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      margin: auto;

      width: auto !important;
      max-width: 100%;
      height: auto;
      max-height: 100%;
      display: block;
      vertical-align: middle;
    }
  }
  .caption {
    font-style: italic;
  }
}

.full-width-image-block {
  img {
    width: 100%;
  }
}

.paragraph-with-image-block {

  .align-right {
    float: right;
    padding-left: 30px;
  }

  .align-left {
    float: left;
    padding-right: 30px;
  }
}

